@@ -9,16 +9,16 @@
     </maintainer>
 <!--
     <title>
-      System Log Viewer Manual V2.2
+      System Log Viewer Manual V2.3
     </title>
 -->    
     <title>
       System Log Viewer
     </title>
     <date>
-      2002-08-02
+      2002-10-15
     </date>
-    <version identifier="2.2" date="2002-08-02" description="Updated for GNOME 2.0, program version 1.107.0"/>
+    <version identifier="2.3" date="2002-10-15" description="Updated for GNOME 2.0, program version 2.0.0"/>
     <subject category="GNOME|Applications|System Tools"/>
     <description>
       User manual for System Log Viewer. 
