@@ -2,9 +2,9 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY appversion "1.107.0">
-  <!ENTITY manrevision "2.2">
-  <!ENTITY date "August 2002">
+  <!ENTITY appversion "2.0.0">
+  <!ENTITY manrevision "2.3">
+  <!ENTITY date "October 2002">
   <!ENTITY app "System Log Viewer">
 ]>
 <!-- 
@@ -79,44 +79,54 @@
 
     <revhistory>
       <revision> 
-					<revnumber>&app; Manual V&manrevision;</revnumber> 
-					<date>&date;</date> 
-					<revdescription> 
-	  					<para role="author">Sun GNOME Documentation Team
-	    			<email>gdocteam@sun.com</email>
-	  					</para>
-	  					<para role="publisher">GNOME Documentation Project</para>
-					</revdescription> 
+		<revnumber>&app; Manual V&manrevision;</revnumber> 
+		<date>&date;</date> 
+		<revdescription> 
+	  		<para role="author">Sun GNOME Documentation Team
+	    		<email>gdocteam@sun.com</email>
+	  		</para>
+	  		<para role="publisher">GNOME Documentation Project</para>
+		</revdescription> 
       </revision>
       <revision> 
-					<revnumber>System Log Viewer Manual V2.1</revnumber> 
-					<date>July 2002</date> 
-					<revdescription> 
-	  					<para role="author">Sun GNOME Documentation Team
-	    			<email>gdocteam@sun.com</email>
-	  					</para>
-	  					<para role="publisher">GNOME Documentation Project</para>
-					</revdescription> 
+		<revnumber>System Log Viewer Manual V2.2</revnumber> 
+		<date>August 2002</date> 
+		<revdescription> 
+	  		<para role="author">Sun GNOME Documentation Team
+	    		<email>gdocteam@sun.com</email>
+	  		</para>
+	  		<para role="publisher">GNOME Documentation Project</para>
+		</revdescription> 
       </revision>
       <revision> 
-					<revnumber>System Log Viewer Manual V2.0</revnumber> 
-					<date>May 2002</date> 
-					<revdescription> 
-	  					<para role="author">Sun GNOME Documentation Team
-	    			<email>gdocteam@sun.com</email>
-	  					</para>
-	  					<para role="publisher">GNOME Documentation Project</para>
-					</revdescription> 
+		<revnumber>System Log Viewer Manual V2.1</revnumber> 
+		<date>July 2002</date> 
+		<revdescription> 
+	  		<para role="author">Sun GNOME Documentation Team
+	    		<email>gdocteam@sun.com</email>
+	  		</para>
+	  		<para role="publisher">GNOME Documentation Project</para>
+		</revdescription> 
+      </revision>
+      <revision> 
+		<revnumber>System Log Viewer Manual V2.0</revnumber> 
+		<date>May 2002</date> 
+		<revdescription> 
+	  		<para role="author">Sun GNOME Documentation Team
+	    		<email>gdocteam@sun.com</email>
+	  		</para>
+	  		<para role="publisher">GNOME Documentation Project</para>
+		</revdescription> 
       </revision> 
       <revision> 
-					<revnumber>Logview Manual</revnumber> 
-					<date>2000</date> 
-					<revdescription> 
-	  					<para role="author">Judith Samson
-	    			<email>judith@samsonsource.com</email>
-	  					</para>
-	  					<para role="publisher">GNOME Documentation Project</para>
-					</revdescription> 
+		<revnumber>Logview Manual</revnumber> 
+		<date>2000</date> 
+		<revdescription> 
+	  		<para role="author">Judith Samson
+	    		<email>judith@samsonsource.com</email>
+	  		</para>
+	  		<para role="publisher">GNOME Documentation Project</para>
+			</revdescription> 
       </revision> 
     </revhistory> 
 
@@ -197,13 +207,13 @@
 
     <sect2 id="syslog-open">
     	<title>To View a Log File</title>
-    	<para>To view a log file, choose <menuchoice><guimenu>Log</guimenu><guimenuitem>Open</guimenuitem></menuchoice>. 
+    	<para>To view a log file, choose <menuchoice><guimenu>File</guimenu><guimenuitem>Open</guimenuitem></menuchoice>. 
     	In the <guilabel>Open new logfile</guilabel> dialog, enter the name of the log file that you want to open, then click 
     	<guibutton>OK</guibutton>. Use the scrollbars to scroll through the log file.</para>
     	<para>You can open as many log files as you want. <application>&app;</application> displays one log file at a time in 
     	the <guilabel>System Log Viewer</guilabel> window. To display another log file that is already open in 
-    	<application>&app;</application>, choose <menuchoice><guimenu>Log</guimenu><guimenuitem>Switch Log</guimenuitem></menuchoice>. 
-    	To continue to move through the open log files, choose <menuchoice><guimenu>Log</guimenu><guimenuitem>Switch Log</guimenuitem>
+    	<application>&app;</application>, choose <menuchoice><guimenu>File</guimenu><guimenuitem>Switch Log</guimenuitem></menuchoice>. 
+    	To continue to move through the open log files, choose <menuchoice><guimenu>File</guimenu><guimenuitem>Switch Log</guimenuitem>
     	</menuchoice>.</para> 
     </sect2>
     
@@ -232,7 +242,7 @@
     	as they are added.</para>
     	<para>To monitor a log file, perform the following steps:</para>
     	<orderedlist>
-    		<listitem><para>Choose <menuchoice><guimenu>Log</guimenu><guimenuitem>Monitor</guimenuitem></menuchoice>.</para></listitem>
+    		<listitem><para>Choose <menuchoice><guimenu>File</guimenu><guimenuitem>Monitor</guimenuitem></menuchoice>.</para></listitem>
     		<listitem><para>Select the log file that you want to monitor in the left pane of the <guilabel>Monitor options</guilabel> 
     		dialog. </para></listitem>
     		<listitem><para>Click <guibutton>Add</guibutton>. </para></listitem>
@@ -253,11 +263,9 @@
     
     <sect2 id="syslog-stats">
     	<title>To View Log File Properties</title>
-    	<para>To view the properties of the log file, choose <menuchoice><guimenu>Log</guimenu><guimenuitem>Properties</guimenuitem></menuchoice>.
+    	<para>To view the properties of the log file, choose <menuchoice><guimenu>File</guimenu><guimenuitem>Properties</guimenuitem></menuchoice>.
     	The <guilabel>Log stats</guilabel> dialog displays the following information about the file:</para> 
     	<itemizedlist>
-    		<listitem><para>Full path name and filename.</para>
-    		</listitem>
     		<listitem><para>Size of the file in bytes.</para>
     		</listitem>
     		<listitem><para>Date the file was last modified.</para>
@@ -273,7 +281,7 @@
     
     <sect2 id="syslog-close">
     	<title>To Close a Log File</title>
-    	<para>To close a log file, choose <menuchoice><guimenu>Log</guimenu><guimenuitem>Close</guimenuitem></menuchoice>. If you 
+    	<para>To close a log file, choose <menuchoice><guimenu>File</guimenu><guimenuitem>Close</guimenuitem></menuchoice>. If you 
     	close the last log file that is open, the application exits.</para> 
     </sect2>
  
