@@ -1,0 +1,8 @@
+syslog_window.png
+
+1. Start System Log Viewer (Applications -> System Tools -> System Log). 
+2. Ensure that the window has focus. If it does not, click on the window to give it focus.
+3. Take a screenshot of the window. 
+4. For security reasons, edit the screenshot to replace the name of the system in the 2nd column with a dummy
+   name.
+5. Save the file to PNG.
