@@ -1,3 +1,14 @@
+2002-10-15  Irene Ryan <irene.ryan@sun.com>
+
+	* help/C/gnome-system-log.xml: updated to fix bug #91164
+	* help/C/gnome-system-log-C.omf: updated manual date
+	  and version number
+	* help/C/l10n.txt: new text containing instruction for
+	  the L10N team about how to take the screenshots for
+	  the manual
+	* help/C/figures/syslog_window.png: updated screenshot
+	  of the latest application
+	      
 2002-09-26  Deepa Natarajan  <deepa.natarajan@wipro.com>
 
 	* monitor.c: Set remove list in the Monitor Options window to
